# sf-rag-client-production

./: .gitignore  middleware.ts  package-lock.json  package.json
client/: .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.fixed.json  tsconfig.json
client/src/app/: layout.tsx  page.tsx
client/src/app/(dashboard)/projects/: layout.tsx  page.tsx
client/src/app/about/: page.tsx
client/src/components/chat/: ChatInterface.tsx  MessageList.tsx
client/src/components/layout/: Sidebar.tsx
client/src/components/projects/: FileDetailsModal.tsx  KnowledgeBaseSidebar.tsx
client/src/hooks/: useApi.ts
client/src/lib/: api.ts
client/src/lib/api/: index.ts
server/: .gitignore  README.md  SPEED_OPTIMIZATION_GUIDE.md  auth.py  check_data.py  create_anonymous_user.py  database.py  disable_rls.py  fix_schema.py  main.py  pyproject.toml  tasks.py
server/routers/: chats.py  files.py  projects.py  test_routes.py  users.py
server/supabase/: config.toml
server/supabase/migrations/: 20251219000000_initial_schema.sql  20251229194733_chunk_search_functions.sql
src/app/: layout.tsx  page.tsx
src/app/(dashboard)/projects/: page.tsx
src/app/api-test/: page.tsx
src/app/contact/: page.tsx
src/components/chat/: ChatInput.tsx  ChatInterface.tsx  MessageItem.tsx  MessageList.tsx
src/components/projects/: CreateProjectModal.tsx  FileDetailsModal.tsx  KnowledgeBaseSidebar.tsx  ProjectsGrid.tsx
src/components/projects/document-details/: PartitioningStep.tsx
src/lib/: api.ts  supabase.ts
src/lib/types/: index.ts
(+6 files in other folders)
